ex03-2 solved, equal spacing between squeres

--- a/week06/day03/ex03-2style.css
+++ b/week06/day03/ex03-2style.css
@@ -2,14 +2,13 @@
   display: flex;
   height: 280px;
   background-color: #ffd62a;
-  align-items: center;
   list-style-type: none;
   padding: 0;
+  align-items: center;
+  justify-content: space-between;
 }
 .item {
   height: 110px;
   width: 110px;
   background-color: #b02aff;
-  margin-right: 8px;
-
 }
